fixing margin top on mobile

--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ footer {
         padding: 25vh 3vw;
         background-color: #ffffff;
         border-radius: 55px;
-        margin-top: 20vh;
+        margin-top: 47vh;
     }
     footer {
         font-size: 1em;
